# tickethub-ai

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/config/: README.md  dev.env.example  prod.env.example  staging.env.example
backend/packaging/: server_entry.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/src/app/: __init__.py  main.py
backend/src/app/api/: deps.py
backend/src/app/core/: clock.py  config.py  errors.py  storage.py
backend/src/app/db/: base.py  schema.py  session.py
backend/src/app/integrations/: README.md
backend/src/app/models/: __init__.py  ai_profile.py  ai_settings.py  attachment.py  email_account.py  odoo_connection.py  project.py  ticket.py  ticket_event.py  ticket_message.py
backend/src/app/repositories/: ai_profile_repository.py  ai_settings_repository.py  email_account_repository.py  odoo_connection_repository.py  project_repository.py  ticket_repository.py
backend/src/app/schemas/: ai_profile.py  ai_settings.py  email_account.py  odoo_connection.py  project.py  ticket.py  worker.py
backend/src/app/services/: ai_profile_service.py  ai_settings_service.py  email_account_service.py  email_ingest_service.py  odoo_connection_service.py  odoo_ingest_service.py  project_service.py  ticket_service.py
backend/src/app/workers/: README.md  (+7 more)
backend/tests/: conftest.py  test_ai_clean.py  test_ai_worker.py  test_code_worker.py  test_email_accounts_api.py  test_email_ingest.py  test_email_parser.py  test_git_repo.py  test_job_runner.py  test_odoo_connections_api.py  test_odoo_ingest.py  test_tickets_api.py
(+77 files in other folders)
