[project]
name = "tickethub-ai-backend"
version = "0.1.0"
description = "Backend FastAPI: job runner, integrazioni AI/email/git/odoo, persistenza ticket"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
