[project]
name = "tickethub-ai-backend"
version = "0.1.0"
description = "Backend FastAPI: job runner, integrazioni AI/email/git/odoo, persistenza ticket"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# UP042: manteniamo `(str, Enum)` — esplicito e compatibile con SQLAlchemy Enum.
ignore = ["UP042"]

[tool.ruff.lint.flake8-bugbear]
# Pattern idiomatico FastAPI: chiamate nei default degli argomenti (dependency injection).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
